<resources>
    <string name="app_name">Ёрдам якин</string>
    <string name="app_mes">ФВВ Узбекистон</string>
    <string name="menu_home">Асосий меню</string>
    <string name="menu_update">Янгиланг</string>
    <string name="menu_what_to_do">Нима килиш керак?</string>
    <string name="menu_first_aid">Биринчи ёрдам</string>
    <string name="menu_map_of_adverse_events">Нокулай ходисалар харитаси</string>
    <string name="menu_check_yourself">Узингизни текширинг</string>
    <string name="menu_encyclopedia">Энциклопедия</string>
    <string name="menu_information_and_settings">Маълумот ва созламалар</string>
    <string name="search_hint">Излаш</string>
    <string name="adress_site">https://www.fvv.uz/uz</string>
    <string name="dialog_title">Сиз фавкулодда вазият тугмачасини босдингиз</string>
    <string name="dialog_btn_call">ФВВга кунгирок килиш</string>
    <string name="dialog_btn_setting">Созламаларни узгартириш</string>
    <string name="dialog_btn_close">Бекор килиш</string>
    <string name="header_lang">Тил созламалари</string>
    <string name="lang_uz_l">O`zb</string>
    <string name="lang_uz_k">Узб</string>
    <string name="lang_ru">Рус</string>
    <string name="lang_en">Анг</string>
    <string name="text_btn_lang_close">Ёпиш</string>
    <string name="text_btn_lang_run">Ижро этиш</string>
    <string name="header_set_call_btn">Фавкуладда чакирув тугмачасини босиш буйича харакатларни созлаш</string>
    <string name="body_1_set_call_btn">Асосий</string>
    <string name="checkbox_1_set_call_btn">ФВВга кунгирок килиш</string>
    <string name="body_2_set_call_btn">Кушимча</string>
    <string name="body_3_set_call_btn">Сизнинг операторингиз тариф режасига мувофик туловлар</string>
    <string name="radiobtn_1_set_call_btn">Кушимча чоралар курманг</string>
    <string name="radiobtn_2_set_call_btn">Олдиндан урнатилган ракамга кунгирок килинг</string>
    <string name="radiobtn_3_set_call_btn">Олдиндан урнатилган ракамга СМС юборинг</string>
    <string name="radiobtn_4_set_call_btn">ФВВга кунгирок килиш</string>
    <string name="first_aid_yes_no_body_1_text">Вокеа жойини текширинг.</string>
    <string name="first_aid_yes_no_body_2_text">Сиз хавф остида колдингизми?</string>
    <string name="first_aid_yes_no_btn_yes">Ха</string>
    <string name="first_aid_yes_no_btn_no">Йук</string>
    <string name="first_aid_yes_body_1_text">Хеч нарса килманг, ихтисослашган хизматга кунгирок килинг.</string>
    <string name="what_to_do_element_1">Кимёвий хавфли моддалар билан бахтсиз ходиса</string>
    <string name="what_to_do_element_2">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_3">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_4">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_5">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_6">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_7">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_8">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_9">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_10">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_11">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_12">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_13">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_14">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_15">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_16">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_17">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_18">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_19">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_20">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_21">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_22">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_23">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_24">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_25">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_26">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_27">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_28">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_29">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_30">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_31">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_32">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_33">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_34">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_35">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_36">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_37">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_38">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_39">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="what_to_do_element_40">Бензин ва бошка ёнувчан суюкликлар</string>
    <string name="first_aid_element_1">Биринчи ёрдам: нима килиш керак?</string>
    <string name="first_aid_element_2">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_3">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_4">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_5">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_6">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_7">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_8">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_9">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_10">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_11">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_12">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_13">Юрак-упка реанимацияси</string>
    <string name="first_aid_element_14">Юрак-упка реанимацияси</string>
    <string name="check_your_self_element_1">Момакалдирок</string>
    <string name="check_your_self_element_2">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_3">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_4">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_5">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_6">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_7">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_8">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_9">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_10">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_11">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_12">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_13">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_14">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_15">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_16">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_17">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_18">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_19">Хавфсиз дам олиш</string>
    <string name="check_your_self_element_20">Хавфсиз дам олиш</string>
    <string name="encyclopedia_element_1">Сув хавфсизлиги</string>
    <string name="encyclopedia_element_2">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_3">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_4">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_5">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_6">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_7">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_8">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_9">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_10">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_11">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_12">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_13">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_14">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_15">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_16">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_17">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_18">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_19">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_20">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_21">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_22">Хавфсиз гулхан</string>
    <string name="encyclopedia_element_23">Хавфсиз гулхан</string>
    <string name="information_and_settings_element_1">Созламалар</string>
    <string name="information_and_settings_element_2">Курсатмалар</string>
    <string name="information_and_settings_element_3">Фойдаланиш шартлари</string>
    <string name="information_and_settings_element_4">Илова хакида</string>
    <string name="settings_element_1">Тил</string>
    <string name="settings_element_2">Фавкулотда вазият тугмачасини созлаш</string>
    <string name="text_count_test"> саволлар</string>
    <string name="btn_start_test">Аввал синовдан утинг</string>
    <string name="text_time_history">Синов муваффакиятли утди:</string>
    <string name="text_percent_history">Натижа:</string>
    <string name="text_coment_history">Натижада шарх:</string>
    <string name="text_non_ans_history">Жавоб берилмаган саволлар:</string>
    <string name="text_true_ans_history">Тугри жавоблар:</string>
    <string name="text_false_ans_history">Нотугри жавоблар:</string>
    <string name="text_time_span_ans_history">Сарфланган вакт:</string>
    <string name="btn_window_preed">Оркага</string>
    <string name="btn_window_next">Кейингиси</string>
    <string name="question_0_0">Стресс нима?</string>
    <string name="answer_a_0_0">Инсонни шоду-хуррамликка туширувчи ҳолат.</string>
    <string name="answer_b_0_0">Ҳайвон ва инсон организмида турли нохуш омиллар (стрессорлар) таъсирига жавобан юзага келувчи физиологик ҳимоя реакциялари мажмуи.</string>
    <string name="answer_c_0_0">Хавф-хатарни сезиш, хавфсираш ҳолати.</string>
    <string name="answer_d_0_0">Назоратдан чиқиб кетган қўрқув.</string>
    <string name="is_answer_a_0_0">0</string>
    <string name="is_answer_b_0_0">1</string>
    <string name="is_answer_c_0_0">0</string>
    <string name="is_answer_d_0_0">0</string>
    <string name="question_1_0">Стресс нима?</string>
    <string name="answer_a_1_0">Инсонни шоду-хуррамликка туширувчи ҳолат.</string>
    <string name="answer_b_1_0">Ҳайвон ва инсон организмида турли нохуш омиллар (стрессорлар) таъсирига жавобан юзага келувчи физиологик ҳимоя реакциялари мажмуи.</string>
</resources>