<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui_info.first_aid_yes_no.FirstAidYesNoFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/normal_text"
            android:text="@string/first_aid_yes_no_body_1_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/normal_text"
            android:text="@string/first_aid_yes_no_body_2_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/question_btn_yes"
                    android:background="@drawable/btn_yes"
                    style="@style/button_yes_no"
                    android:text="@string/first_aid_yes_no_btn_yes" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/question_btn_no"
                    android:background="@drawable/btn_no"
                    style="@style/button_yes_no"
                    android:text="@string/first_aid_yes_no_btn_no" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>