<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_red">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_title"
            android:layout_margin="@dimen/call_dialog_text_margin"
            android:textSize="16sp"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialog_btn_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/dialog_btn_call"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@color/color_btn_dialog"
            android:textColor="@color/white"

            android:layout_margin="@dimen/call_dialog_btn_margin"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialog_btn_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/dialog_btn_setting"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/color_btn_dialog_proz"

            android:layout_marginBottom="@dimen/call_dialog_btn_margin"
            android:layout_marginStart="@dimen/call_dialog_btn_margin"
            android:layout_marginEnd="@dimen/call_dialog_btn_margin"/>
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_devider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialog_btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/dialog_btn_close"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@android:color/transparent"

            android:textColor="@color/black"/>
    </RelativeLayout>
</LinearLayout>